test/visibility/except/functionExclude.good
functionExclude.chpl:14: In function 'main':
functionExclude.chpl:15: error: unresolved call 'foo()'
functionExclude.chpl:15: note: because no functions named foo found in scope
